# server/docs/swagger.json
@@ -35,25 +35,22 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "allOf": [
-                                    {
-                                        "$ref": "#/definitions/handler.BaseHttpResponse"
-                                    },
-                                    {
-                                        "type": "object",
-                                        "properties": {
-                                            "data": {
-                                                "type": "array",
-                                                "items": {
-                                                    "$ref": "#/definitions/models.Leaderboard"
-                                                }
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.BaseHttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/handler.LeaderboardResponse"
                                             }
                                         }
                                     }
-                                ]
-                            }
+                                }
+                            ]
                         }
                     },
                     "500": {
@@ -204,6 +201,27 @@
                 "data": {},
                 "error": {
                     "type": "string"
+                }
+            }
+        },
+        "handler.LeaderboardResponse": {
+            "type": "object",
+            "required": [
+                "score",
+                "touches",
+                "username"
+            ],
+            "properties": {
+                "score": {
+                    "type": "integer"
+                },
+                "touches": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string",
+                    "maxLength": 32,
+                    "minLength": 1
                 }
             }
         },
